# Cupid

./: .gitignore  .gitmodules  README.md
2.Software/: CMakeLists.txt  sdkconfig  sdkconfig.old
2.Software/components/battery/: CMakeLists.txt  battery.c
2.Software/components/battery/include/: battery.h
2.Software/components/esp32_drivers/: CMakeLists.txt  esp32_drivers.c
2.Software/components/esp32_drivers/include/: esp32_drivers.h
2.Software/components/gui/: CMakeLists.txt  gui.c
2.Software/components/gui/include/: gui.h
2.Software/components/lm75/: CMakeLists.txt  lm75.c
2.Software/components/lm75/include/: lm75.h
2.Software/components/nrf24l01/: CMakeLists.txt  nrf24l01.c
2.Software/components/nrf24l01/include/: nrf24l01.h
2.Software/components/rx8025/: CMakeLists.txt  rx8025.c
2.Software/components/rx8025/include/: CMakeLists.txt  rx8025.h
2.Software/components/sd_card/: CMakeLists.txt  sd_card.c
2.Software/components/sd_card/include/: sd_card.h
2.Software/components/touch/: CMakeLists.txt  touch.c
2.Software/components/touch/include/: touch.h
2.Software/main/: main.c
